# uau-api

./: .gitignore  README.md  analytic.ipynb  download_files.py  mkdocs.yml  nf.ipynb  parse.ipynb  pyproject.toml  test.py  tmp.txt
RequestsApi/: RequestsApi.py
docs/: index.md
docs/api/: Obras.md  ProcessoPagamento.md  uau_api.md
helpers/: generate_api_classes.py  generate_docstring.py
uau_api/: __init__.py  app.py  base.py  client.py  database.py  models.py  operations.py  requestsapi.py  schemas.py  settings.py  utils.py
uau_api/groups/: acompanhamento_contrato_venda.py  acompanhamentos_servicos.py  acompanhar_entrega.py  anexo.py  atendimento.py  autenticador.py  banco_horas.py  boleto_services.py  chave_pix.py  cobranca_pix.py  comissao.py  composicoes.py  config_gerais.py  contabil.py  contrato_material_servico.py  correio_eletronico.py  cotacao.py  documentos_digitais_integracao.py  empresa.py  espelho.py  estrutura.py  eventos.py  extrato_do_cliente.py  fiscal.py  folha.py  funcionario.py  insumos_geral.py  lista_preco_referencia.py  localidade.py  medicao.py  modelo_venda.py  notas_fiscais.py  obras.py  orcamento.py  pedido_compra.py  pessoas.py  planejamento.py  processo_pagamento.py  proposta.py  prospect.py  (+10 more)
