[project]
authors = [
    {name = "codetricksters", email = "leonardo.magic@hotmail.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "requests<3.0.0,>=2.31.0",
    "typer<1.0.0,>=0.15.2",
]
name = "uau-api"
version = "1.0.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.5",
    "isort<7.0.0,>=6.0.1",
    "blue<1.0.0,>=0.9.1",
    "taskipy<2.0.0,>=1.14.1",
    "pytest-cov<7.0.0,>=6.1.1",
]
doc = [
    "mkdocs-material<10.0.0,>=9.6.12",
    "mkdocstrings<1.0.0,>=0.29.1",
    "mkdocstrings-python<2.0.0,>=1.16.10",
]
[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_lenght = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=uau_api -vv"
post_test = "coverage html"

[tool.ruff.format]
quote-style = "single"

[tool.setuptools.packages.find]
where = ["uau_api"]